--- a/llvm/utils/gn/secondary/llvm/lib/Transforms/Utils/BUILD.gn
+++ b/llvm/utils/gn/secondary/llvm/lib/Transforms/Utils/BUILD.gn
@@ -62,6 +62,7 @@ static_library("Utils") {
     "LowerGlobalDtors.cpp",
     "LowerIFunc.cpp",
     "LowerInvoke.cpp",
+    "LowerMathIntrinsics.cpp",
     "LowerMemIntrinsics.cpp",
     "LowerSwitch.cpp",
     "MatrixUtils.cpp",
